--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>COOL PICS</title>
   </head>
   <body id="page-top">
-    <nav class="navbar navbar-expand-lg text-uppercase fixed-top">
+    <nav class="navbar navbar-expand-lg text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top" id="navbarTitle">Cool Pics</a>
             <button class="navbar-toggler navbar-toggler-right text-uppercase text-white rounded" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -39,6 +39,36 @@
             </div>
         </div>
     </nav>
+    <!-- Masthead -->
+    <header class="masthead text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+
+            <!-- Masthead Avatar Image -->
+        
+            <span class="mb-5">
+            <img class="masthead-avatar" src="resources/img/punpun.png" alt="Avatar image">
+            </span>
+        
+            <!-- Masthead Heading -->
+            <h1 class="masthead-heading text-uppercase mb-4 display-3">Stop Suffering</h1>
+
+            <!-- Icon Divider -->
+            <div class="divider-custom divider-light mt-lg-4 mb-2">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon">
+                    <i class="far fa-eye fa-2x"></i>
+                    <i class="far fa-eye fa-2x"></i>
+                    <i class="far fa-eye fa-2x"></i>
+                    <i class="far fa-eye fa-2x"></i>
+                </div>
+                <div class="divider-custom-line"></div>
+              </div>
+
+            <!-- Masthead Subheading -->
+            <p class="masthead-subheading font-weight-light mt-2 mb-0">Are you living in the real world?</p>
+
+        </div>
+    </header>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
