LP-010 About section upload

--- a/index.html
+++ b/index.html
@@ -91,9 +91,35 @@
 
       <!-- Portafolio content modals-->
       <div id="portfolioModals"></div>
-      
-
       </div>
+  </section>
+
+  <!--About section-->
+  <section class="page-section text-white mb-0" id="about">
+    <div class="container">
+
+      <!-- About Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom divider-light mb-4">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-crow fa-2x"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- About Section Content -->
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <p class="lead">Cool pics is just a site i made using some cool pictures i've found on the internet, all the "Cool Pics" staff feels like we need to share these aesthetics to the world.</p>
+        </div>
+        <div class="col-lg-4 mr-auto">
+          <p class="lead">Also in order to make this a good place to vibe, we invite you all to keep embracing this trend, it's been great for all of us since then!</p>
+        </div>
+      </div>
+    </div>
   </section>
     <!-- Optional JavaScript -->
     
