--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Masthead Avatar Image -->
         
             <span class="mb-5">
-            <img class="masthead-avatar" src="resources/img/punpun.png" alt="Avatar image">
+            <img class="masthead-avatar" src="img/punpun.png" alt="Avatar image">
             </span>
         
             <!-- Masthead Heading -->
